--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-   <title> choco home </title> 
+    <title> choco home </title>
+    <link rel="stylesheet" text="text/css" href="css/mystyles.css">
 
 </head>
+
 <body>
-   <h1> A site about chocolate </h1> 
+    <div class="jumbotron">
+        <h1> A site about chocolate </h1>
+    </div>
+
 </body>
+
 </html>
