--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title> choco home </title>
+
     <link rel="stylesheet" text="text/css" href="css/mystyles.css">
 
 </head>
@@ -12,8 +13,16 @@
         <h1> A site about chocolate </h1>
         <h3>We will see some of the world's chocolates!</h3>
     </div>
-    <p>It arrived to Europe in 16<sup>th</sup> century</p>
-
+    <ol>
+        <li>It arrived to Europe in 16<sup>th</sup> century</li>
+        <li>The first years, only drinking chocolate was available</li>
+        <li>It was considered luxury food!</li>
+        <li>It contains <ins>caffeine</ins> </li>
+        <li> <mark> Your brain needs it after hard work!</mark></li>
+    </ol>
+    <a href="https://en.wikipedia.org/wiki/Chocolate" target="_blank"> 
+        <img src="Images/chocolatethings.jpg" alt="Chocolate things" title="Chocolate thing"> 
+    </a>
 </body>
 
 </html>
